--- a/wercker.yml
+++ b/wercker.yml
@@ -22,15 +22,9 @@ build:
     - script:
        name: env
        code: env
-       
-    # Set up database
-    - script:
-       name: set up db
-       code: |
-         url: jdbc:postgresql://$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/$POSTGRES_DB
-       
+
     # https://github.com/wercker/step-maven
     - wercker/maven:
-      goals: clean install
+      goals: clean install -Dspring-boot.run.arguments=--postgre.datasource.url=jdbc:postgresql://$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/$POSTGRES_DB,--postgre.datasource.username=$POSTGRES_ENV_POSTGRES_USER,--postgre.datasource.password=$POSTGRES_ENV_POSTGRES_PASSWORD
       cache_repo: true
       version: 3.5.4
