--- a/wercker.yml
+++ b/wercker.yml
@@ -22,9 +22,20 @@ build:
     - script:
        name: env
        code: env
+       
+    # Set up database
+    - script:
+       name: set up db
+       code: |
+         export POSTGRE_DATASOURCE_URL = jdbc:postgresql://$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/$POSTGRES_DB
+         export POSTGRE_DATASOURCE_PASSWORD = $POSTGRES_ENV_POSTGRES_PASSWORD
+         export POSTGRE_DATASOURCE_USERNAME = $POSTGRES_ENV_POSTGRES_USER
+         echo $POSTGRE_DATASOURCE_URL
+         echo $POSTGRE_DATASOURCE_PASSWORD
+         echo $POSTGRE_DATASOURCE_USERNAME
 
     # https://github.com/wercker/step-maven
     - wercker/maven:
-      goals: clean install -Dspring-boot.run.arguments=--postgre.datasource.url=jdbc:postgresql://$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/$POSTGRES_DB,--postgre.datasource.username=$POSTGRES_ENV_POSTGRES_USER,--postgre.datasource.password=$POSTGRES_ENV_POSTGRES_PASSWORD
+      goals: clean install
       cache_repo: true
       version: 3.5.4
