--- a/wercker.yml
+++ b/wercker.yml
@@ -27,9 +27,9 @@ build:
     - script:
        name: set up db
        code: |
-         export POSTGRE_DATASOURCE_URL = jdbc:postgresql://$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/$POSTGRES_DB
-         export POSTGRE_DATASOURCE_PASSWORD = $POSTGRES_ENV_POSTGRES_PASSWORD
-         export POSTGRE_DATASOURCE_USERNAME = $POSTGRES_ENV_POSTGRES_USER
+         export POSTGRE_DATASOURCE_URL=jdbc:postgresql://$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/$POSTGRES_ENV_POSTGRES_DB
+         export POSTGRE_DATASOURCE_PASSWORD=$POSTGRES_ENV_POSTGRES_PASSWORD
+         export POSTGRE_DATASOURCE_USERNAME=$POSTGRES_ENV_POSTGRES_USER
          echo $POSTGRE_DATASOURCE_URL
          echo $POSTGRE_DATASOURCE_PASSWORD
          echo $POSTGRE_DATASOURCE_USERNAME
