--- a/wercker.yml
+++ b/wercker.yml
@@ -45,12 +45,13 @@ build:
       goals: clean install
       cache_repo: true
 sonar:
-   # Analyze the source code
-   - script:
-     name: sonar
-     code: |
-       mvn sonar:sonar \
-       -Dsonar.projectKey=quiz-api \
-       -Dsonar.organization=vescuderog-github \
-       -Dsonar.host.url=https://sonarcloud.io \
-       -Dsonar.login=948263eedad9e180e239fd730df62637eb0ab389
+  steps:
+    # Analyze the source code
+    - script:
+       name: sonar
+       code: |
+         mvn sonar:sonar \
+         -Dsonar.projectKey=quiz-api \
+         -Dsonar.organization=vescuderog-github \
+         -Dsonar.host.url=https://sonarcloud.io \
+         -Dsonar.login=948263eedad9e180e239fd730df62637eb0ab389
