--- a/wercker.yml
+++ b/wercker.yml
@@ -54,4 +54,4 @@ sonar:
          -Dsonar.projectKey=quiz-api \
          -Dsonar.organization=vescuderog-github \
          -Dsonar.host.url=https://sonarcloud.io \
-         -Dsonar.login=948263eedad9e180e239fd730df62637eb0ab389
+         -Dsonar.login=$LOGIN
