--- a/wercker.yml
+++ b/wercker.yml
@@ -55,3 +55,16 @@ sonar:
          -Dsonar.organization=vescuderog-github \
          -Dsonar.host.url=https://sonarcloud.io \
          -Dsonar.login=$LOGIN
+test:
+  steps:
+    - script:
+       name: integration test
+       code: |
+         echo 'Python test'
+deploy:
+  steps:
+    - heroku-deploy:
+        key: $HEROKU_KEY
+        key-name: DEPLOY_KEY
+        user: $HEROKU_USER
+        app-name: api-quiz-app
