--- a/wercker.yml
+++ b/wercker.yml
@@ -1,5 +1,5 @@
-# This references an OpenJDK container from the
-# Docker Hub https://hub.docker.com/_/openjdk/
+# This references an Maven container from the
+# Docker Hub https://hub.docker.com/_/maven/
 # Read more about containers on our dev center
 # https://devcenter.wercker.com/overview-and-core-concepts/containers/
 box: maven:3.5.4-jdk-8-alpine
@@ -44,6 +44,12 @@ build:
     - wercker/maven:
       goals: clean install
       cache_repo: true
+test:
+  steps:
+    - script:
+       name: integration test
+       code: |
+         echo 'Python test'
 sonar:
   steps:
     # Analyze the source code
@@ -55,14 +61,18 @@ sonar:
          -Dsonar.organization=vescuderog-github \
          -Dsonar.host.url=https://sonarcloud.io \
          -Dsonar.login=$LOGIN
-test:
-  steps:
-    - script:
-       name: integration test
-       code: |
-         echo 'Python test'
 deploy:
   steps:
+    # Install git is required
+    - script
+       name: install-git
+       code: |
+         apk update \
+         && apk add --virtual build-dependencies \
+         build-base \
+         git \
+         mktemp \
+    # Deploy api in heroku
     - heroku-deploy:
         key: $HEROKU_KEY
         key-name: DEPLOY_KEY
