--- a/wercker.yml
+++ b/wercker.yml
@@ -6,8 +6,8 @@ box: maven:3.5.4-jdk-8-alpine
 services:
   - id: postgres
     env:
-      POSTGRES_PASSWORD: quiz.2019
-      POSTGRES_USER: quiz_rw
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_USER: $POSTGRES_USER
       POSTGRES_DB: quiz_app
 
 # This is the build pipeline. Pipelines are the core of wercker
@@ -33,17 +33,20 @@ build:
          echo $POSTGRE_DATASOURCE_URL
          echo $POSTGRE_DATASOURCE_PASSWORD
          echo $POSTGRE_DATASOURCE_USERNAME
-    
-    # Install
-    # - script:
-       # name: install
-       # code: |
-         # mvn -Dmaven.repo.local=$WERCKER_CACHE_DIR/.m2 clean install
-         
     # https://github.com/wercker/step-maven
-    - wercker/maven:
-      goals: clean install
-      cache_repo: true
+    # - wercker/maven:
+      # goals: clean install
+      # cache_repo: true
+    # Install
+    - script:
+       name: maven install
+       code: |
+         mvn -Dmaven.repo.local=$WERCKER_CACHE_DIR/.m2 clean install -DskipTests=false
+    # Test: unit and integration
+    - script:
+       name: maven test
+       code: |
+         mvn -Dmaven.repo.local=$WERCKER_CACHE_DIR/.m2 clean install
 sonar:
   steps:
     # Analyze the source code
