--- a/wercker.yml
+++ b/wercker.yml
@@ -24,7 +24,7 @@ build:
        # code: env
     # Install and skip tests. https://github.com/wercker/step-maven
     - wercker/maven:
-      goals: clean install -DskipTests=false
+      goals: clean install -DskipTests=true
       cache_repo: true
 unit-test:
   steps:
