--- a/wercker.yml
+++ b/wercker.yml
@@ -30,7 +30,7 @@ unit-test:
   steps:
     # Unit testing
     - wercker/maven:
-      goals: clean test
+      goals: test
       cache_repo: true
 integration-test:
   steps:
@@ -58,7 +58,7 @@ sonar:
          -Dsonar.organization=vescuderog-github \
          -Dsonar.host.url=https://sonarcloud.io \
          -Dsonar.login=$LOGIN \
-         -Dsonar.junit.reportPaths=target/surefire-reports
+         -Dsonar.junit.reportPaths=/pipeline/source/target/surefire-reports
 publish:
   steps:
     # Publish the package (jar)
@@ -66,6 +66,7 @@ publish:
        name: publish
        code: |
          echo 'Publish on Docker|Nexus|Artifactory'
+         ls -l /pipeline/source/target/
 deploy:
   steps:
     # Install the required dependencies
@@ -90,15 +91,13 @@ acceptance-test:
        code: |
          apk update \
          && apk add --no-cache \
-         python \
-         python-dev \
-         py-pip
+         python3 \
+         pip3
     # Checking python version
     - script:
         name: python information
         code: |
           echo "python version $(python --version) running"
-          echo "pip version $(pip --version) running"
     # Acceptance test
     - script:
        name: acceptance test
