--- a/wercker.yml
+++ b/wercker.yml
@@ -42,10 +42,10 @@ integration-test:
          export POSTGRE_DATASOURCE_PASSWORD=$POSTGRES_ENV_POSTGRES_PASSWORD
          export POSTGRE_DATASOURCE_USERNAME=$POSTGRES_ENV_POSTGRES_USER
     # Integration testing
-    # failsafe:integration-test -> runs the integration tests of an application
-    # failsafe:verify -> verifies that the integration tests of an application passed
+    # integration-test -> runs the integration tests of an application
+    # verify -> verifies that the integration tests of an application passed
     - wercker/maven:
-      goals: failsafe:integration-test failsafe:verify
+      goals: verify
       cache_repo: true
 sonar:
   steps:
@@ -57,8 +57,7 @@ sonar:
          -Dsonar.projectKey=quiz-api \
          -Dsonar.organization=vescuderog-github \
          -Dsonar.host.url=https://sonarcloud.io \
-         -Dsonar.login=$LOGIN \
-         -Dsonar.junit.reportPaths=target/surefire-reports
+         -Dsonar.login=$LOGIN
 publish:
   steps:
     # Publish the package (jar)
@@ -67,7 +66,6 @@ publish:
        code: |
          echo 'Publish on Docker|Nexus|Artifactory'
          ls -l target/
-         ls -l target/surefire-reports
 deploy:
   steps:
     # Install the required dependencies
@@ -93,6 +91,14 @@ acceptance-test:
         code: |
           echo "python version $(python --version) running"
           echo "pip version $(pip --version) running"
+    # Install the required dependencies
+    - script:
+       name: install dependencies
+       code: |
+         apk update \
+         && apk add --no-cache \
+         git \
+         openssh
     # Acceptance test
     - script:
        name: acceptance test
