--- a/wercker.yml
+++ b/wercker.yml
@@ -22,7 +22,8 @@ build:
     # - script:
        # name: env
        # code: env
-    # Install and skip tests. https://github.com/wercker/step-maven
+    # Install with skip tests
+    # https://github.com/wercker/step-maven
     - wercker/maven:
       goals: clean install -DskipTests=true
       cache_repo: true
@@ -34,7 +35,7 @@ unit-test:
       cache_repo: true
 integration-test:
   steps:
-    # Set up database
+    # Set up the database
     - script:
        name: set up db
        code: |
@@ -76,7 +77,7 @@ deploy:
          && apk add --no-cache \
          git \
          openssh
-    # Deploy api in heroku (integration environment)
+    # Deploy api on heroku (integration environment)
     - heroku-deploy:
         key: $HEROKU_KEY
         key-name: DEPLOY_KEY
@@ -85,14 +86,14 @@ deploy:
 acceptance-test:
   box: python:3.7.2-alpine
   steps:
-    # checking python version
+    # Checking the python version
     - script:
         name: python information
         code: |
           echo "python version $(python --version) running"
           echo "pip version $(pip --version) running"
     # Install the required dependencies
-    # Clone and install python qa project
+    # Clone and install the qa project (python)
     - script:
        name: set up qa project
        code: |
@@ -100,7 +101,7 @@ acceptance-test:
          git clone https://$GIT_HUB_USER:$GIT_HUB_TOKEN@github.com/vescuderog/quiz-api-qa.git
          cd quiz-api-qa
          pip3 install -r requirements.txt
-    # Acceptance test
+    # Acceptance testing
     - script:
        name: acceptance test
        code: |
