--- a/wercker.yml
+++ b/wercker.yml
@@ -90,9 +90,9 @@ deploy:
         # app-name: api-quiz-app
     # Deploy docker on heroku
     - internal/docker-push:
-       image-name: quiz-image
        username: $HEROKU_USER
        password: $HEROKU_KEY
+       tag: quiz-image
        registry: https://registry.heroku.com
        repository: registry.heroku.com/api-quiz-app-docker/web
 acceptance-test:
