--- a/wercker.yml
+++ b/wercker.yml
@@ -88,12 +88,17 @@ deploy:
         # key-name: DEPLOY_KEY
         # user: $HEROKU_USER
         # app-name: api-quiz-app
-    # Deploy docker on heroku
+    # Creating a Docker image using a Dockerfile
+    - internal/docker-build:
+       dockerfile: Dockerfile
+       image-name: quiz-image
+    # Deploy docker on Heroku
     - internal/docker-push:
+       image-name: quiz-image
        username: $HEROKU_USER
        password: $HEROKU_KEY
        registry: https://registry.heroku.com
-       repository: registry.heroku.com/api-quiz-app-docker/quiz-api
+       repository: registry.heroku.com/api-quiz-app-docker/web
 acceptance-test:
   box: python:3.7.2-alpine
   steps:
