--- a/wercker.yml
+++ b/wercker.yml
@@ -91,14 +91,13 @@ deploy:
     # Creating a Docker image using a Dockerfile
     - internal/docker-build:
        dockerfile: Dockerfile
-       image-name: quiz-image
+       image-name: quiz-api-image
     # Deploy docker on Heroku
     - internal/docker-push:
-       image-name: quiz-image
        username: $HEROKU_USER
        password: $HEROKU_KEY
        registry: https://registry.heroku.com
-       repository: registry.heroku.com/api-quiz-app-docker/web
+       repository: registry.heroku.com/api-quiz-app-docker/quiz-api-image
 acceptance-test:
   box: python:3.7.2-alpine
   steps:
