--- a/wercker.yml
+++ b/wercker.yml
@@ -88,16 +88,13 @@ deploy:
         # key-name: DEPLOY_KEY
         # user: $HEROKU_USER
         # app-name: api-quiz-app
-    # Creating a Docker image using a Dockerfile
-    - internal/docker-build:
-       dockerfile: Dockerfile
-       image-name: quiz-api-image
     # Deploy docker on Heroku
     - internal/docker-push:
        username: $HEROKU_USER
        password: $HEROKU_KEY
+       tag: quiz-image
        registry: https://registry.heroku.com
-       repository: registry.heroku.com/api-quiz-app-docker/quiz-api-image
+       repository: registry.heroku.com/api-quiz-app-docker/web
 acceptance-test:
   box: python:3.7.2-alpine
   steps:
