--- a/wercker.yml
+++ b/wercker.yml
@@ -90,7 +90,7 @@ deploy:
         # app-name: api-quiz-app
     # Deploy docker on Heroku
     - internal/docker-push:
-       image-name: vescuderog/quiz-api
+       image-name: quiz-image
        username: $HEROKU_USER
        password: $HEROKU_KEY
        registry: https://registry.heroku.com
